--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,16 @@
-$c-gray: #eee;
+$c-font-primary: #fff;
+$c-font-secondary: #000;
+
+$c-bg-primary: #000;
+$c-bg-secondary: #fff;
+
+$c-border-primary: #5c5c5c;
+
+$c-flag-primery: #4ce100;
+$c-flag-secondary:#bf6300;
+
+$c-star-primary: #ffd300;
+$c-star-secondary: #fff;
+
+$c-btn-primery: #4ce100;
+$c-btn-secondary:#2ac000;
