--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,3 +1,89 @@
-h1 {
-  @extend %h1;
+body {
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.intro {
+  color: $c-font-primary;
+
+  &__title {
+    font-size: 22px;
+    font-weight: normal;
+    line-height: 140%;
+    letter-spacing: 1px;
+  }
+
+  &__disc {
+    font-size: 12px;
+    font-weight: 300;
+  }
+
+  &__bonus {
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 1px;
+
+  }
+}
+
+.casinos {
+  &__title {
+    font-size: 12px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: $c-font-primary;
+  }
+}
+
+.card {
+  &__flag {
+    font-size: 10px;
+    font-weight: 900;
+    letter-spacing: 0.5px;
+    text-transform: uppercase;
+  }
+
+  &__text {
+    font-size: 12px;
+    line-height: 140%;
+    text-align: center;
+  }
+
+  &__title {
+    font-size: 14px;
+    font-weight: 700;
+  }
+
+  &__disc {
+    font-size: 12px;
+
+    &--dep {
+      @include onDesktop {
+        font-size: 18px;
+        font-weight: 700;
+        line-height: 32px;
+      }
+    }
+  }
+
+  &__rating-text {
+    font-size: 12px;
+    line-height: 200%;
+    text-align: center;
+  }
+
+  &__rating-value {
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 200%;
+    text-align: center;
+  }
+
+  .btn-play {
+    font-size: 12px;
+    font-weight: 700;
+    color: $c-font-primary;
+  }
 }
